Fixing an alignment issue.

--- a/css/designsprint.css
+++ b/css/designsprint.css
@@ -430,7 +430,6 @@ article .blockquote.table-of-contents ol ol {
 article .table-of-contents li::before {
     background-color: transparent;
     border: 1px solid rgba(255,255,255,0.5);
-    top: 9px;
 }
 
 article .table-of-contents > ol >li::before {
